[gd_scene load_steps=9 format=2]

[ext_resource path="res://Tutorials/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_hover.png" type="Texture" id=2]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_pressed.png" type="Texture" id=3]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_disabled.png" type="Texture" id=4]
[ext_resource path="res://Images/Buttons/HabilityButton/Wide_normal.png" type="Texture" id=5]
[ext_resource path="res://Images/Tutorial/Wandering.png" type="Texture" id=6]
[ext_resource path="res://Images/ProgressBars/Tutorial/OkButtonProgress.png" type="Texture" id=7]
[ext_resource path="res://Images/Dialogs/Player.png" type="Texture" id=8]

[node name="Tutorial" type="Node2D" groups=["TUTORIAL"]]
z_index = 6
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 200.0
margin_top = 32.0
margin_right = 1096.0
margin_bottom = 704.0

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 546.0
margin_top = 624.0
margin_right = 734.0
margin_bottom = 692.0
texture_progress = ExtResource( 7 )
fill_mode = 4
nine_patch_stretch = true

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 192.0
margin_top = 64.0
margin_right = 1088.0
margin_bottom = 688.0

[node name="GridContainer" type="GridContainer" parent="GridContainer"]
margin_right = 896.0
margin_bottom = 283.0
columns = 2

[node name="Player" type="TextureRect" parent="GridContainer/GridContainer"]
margin_left = 98.0
margin_top = 16.0
margin_right = 348.0
margin_bottom = 266.0
rect_min_size = Vector2( 250, 250 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="GridContainer/GridContainer"]
margin_left = 450.0
margin_right = 896.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Não! Esse é o Spoofing, nesse tipo de ataque, o hacker mascara sua identidade ou finge ser outra pessoa, dispositivo ou entidade para enganar os usuários e obter acesso não autorizado. Ele pode se movimentar para baixo, para a direita, para a esquerda, na diagonal direita e na diagonal esquerda, vou precisar de uma defesa bem elaborada para impedir esse invasor, para impedir esse invasor é só fazê-lo encostar em qualquer defesa"
autowrap = true

[node name="Imagem_do_tutorial" type="TextureRect" parent="GridContainer"]
margin_left = 192.0
margin_top = 295.0
margin_right = 704.0
margin_bottom = 551.0
rect_min_size = Vector2( 512, 256 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="OK" type="TextureButton" parent="GridContainer"]
pause_mode = 2
margin_left = 358.0
margin_top = 564.0
margin_right = 538.0
margin_bottom = 624.0
rect_min_size = Vector2( 180, 60 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GridContainer/OK"]
margin_right = 121.0
margin_bottom = 39.0
rect_scale = Vector2( 1.5, 1.5 )
text = "OK"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 3.0
autostart = true

[connection signal="button_up" from="GridContainer/OK" to="." method="_on_OK_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
